# modbus-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: user_guide.md
scripts/: build_app.sh  build_dmg.sh  build_exe.ps1  build_installer.ps1  dev_run.bat  dev_run.sh  installer.iss  modbus_simulator.spec
src/modbus_simulator/: __init__.py  __main__.py  app.py
src/modbus_simulator/config/: paths.py  persistence.py  schema.py
src/modbus_simulator/core/: analyzer.py  client.py  codec.py  datastore.py  exceptions.py  script_sandbox.py  server.py  simulator.py  traffic.py
src/modbus_simulator/gui/: analyzer_tab.py  client_tab.py  exceptions_tab.py  main_window.py  scanner_tab.py  server_tab.py  simulation_tab.py  theme.py  traffic_tab.py  trend_tab.py
src/modbus_simulator/gui/widgets/: led_indicator.py  register_table.py
tests/: conftest.py
tests/integration/: conftest.py  test_combinatorial.py  test_e2e_scenario.py  test_edge_cases.py  test_real_hardware.py  test_server_client.py
tests/unit/: test_analyzer.py  test_client_errors.py  test_codec.py  test_config.py  test_datastore.py  test_exceptions.py  test_gui_client_features.py  test_gui_e2e.py  test_gui_smoke.py  test_script_sandbox.py  test_simulator.py  test_smoke.py  test_traffic.py
